objects/Sales_Territory_Location_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_On_LA__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AssignmentType__c</fullName>
        <label>Assignment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Location__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Location__r.Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Location__r.Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_To_Territory_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Location To Territory Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Locator Id</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Sales Territory Location Assignments</relationshipLabel>
        <relationshipName>Sales_Territory_Location_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locator_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Locator Id</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Sales Territory Location Assignments (Location ID)</relationshipLabel>
        <relationshipName>Sales_Territory_Location_Assignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Locator_Id__c</fullName>
        <formula>Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Locator Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Territory_ID__c</fullName>
        <formula>CASESAFEID(Sales_Territory__r.Id)</formula>
        <label>SFDC Territory ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Territory</label>
        <referenceTo>Sales_Territory__c</referenceTo>
        <relationshipLabel>Sales Territory Location Assignments</relationshipLabel>
        <relationshipName>Sales_Territory_Location_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sell_Into_Market_ST__c</fullName>
        <formula>Location__r.Sell_Into_Market__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell Into Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Country__c</fullName>
        <formula>TEXT(Sales_Territory__r.MyComp_Territory_Country__c)</formula>
        <label>Territory Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Crediting_Type__c</fullName>
        <formula>TEXT( Sales_Territory__r.MyComp_Crediting_Type__c )</formula>
        <label>Territory Crediting Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_MyComp_ID__c</fullName>
        <formula>Sales_Territory__r.MyComp_Id__c</formula>
        <label>Territory MyComp ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Region__c</fullName>
        <formula>TEXT( Sales_Territory__r.MyComp_Territory_Region__c )</formula>
        <label>Territory Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Type__c</fullName>
        <formula>TEXT( Sales_Territory__r.MyComp_Sales_Territory_Type__c )</formula>
        <label>Territory Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackAssociationToDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TrackAssociationToDelete</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Territory Location Assignment</label>
    <nameField>
        <label>STLA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Territory Location Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>